# cellular_automata

./: .gitignore  Cargo.toml  readme.md
docs/: cellular_automata.wasm  index.html
src/: behaviors.rs  cell_properties.rs  cells.rs  constants.rs  controller.rs  main.rs  random_utils.rs  world.rs
