[package]
name = "cellular_automata"
version = "0.1.0"
authors = ["Nathaniel Fernandes <nathaniel.s.fernandes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.10"

[profile.dev.package.'*']
opt-level = 3